--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/diogenesOliver/api-PI#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/nodemailer": "^6.4.7",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.1"
   }
 }
