--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1"
   }
 }
