--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.7",
+    "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
