--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/diogenesOliver/api-PI#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.1",
     "@types/nodemailer": "^6.4.7",
     "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
     "typescript": "^4.9.5"
