--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.1",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
