--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - name: npm install and test
+    - name: Install dependencies
       run: |
         npm install
+
+    - name: Run tests
+      run: |
         npm test
