--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: windows-latest, windows-latest
 
     strategy:
       matrix:
@@ -26,9 +26,7 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: |
-        npm install
+      run: npm ci
 
     - name: Run tests
-      run: |
-        npm test
+      run: npm test
