--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,13 +9,14 @@ on:
       - main
 
 jobs:
-  build:
 
-    runs-on: windows-latest
-
+  test:
+    name: 'Test on node ${{ matrix.node_version }} and ${{ matrix.os }}'
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x, 16.x, 18.x]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v3
