--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
+    "prisma": "^4.12.0",
     "yup": "^1.0.2"
   }
 }
