feat: adding aws credentials to create a image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,9 +20,9 @@ services:
     working_dir: /infra
     container_name: "aws-terraform-iac"
     environment:
-      - AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      - AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_REGION: "${AWS_REGION}"
 
 volumes:
   db-postgres-evento:
