--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
+.DS_Store
 node_modules
-tsconfig.json
+/dist
 
-.gitpod.yml
-.env
 
-jest.config.ts
+# local env files
+.env.local
+.env.*.local
 
-coverage
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-secrete-key.json
-
-database-postgres-apiPI
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
