--- a/package.json
+++ b/package.json
@@ -1,43 +1,60 @@
 {
   "name": "api-pi",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/diogenesOliver/api-PI.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/diogenesOliver/api-PI/issues"
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest"
   },
-  "homepage": "https://github.com/diogenesOliver/api-PI#readme",
+  "main": "index.js",
+  "dependencies": {
+    "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "yup": "^1.0.2"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
     "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vue-template-compiler": "^2.6.14"
   },
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "nodemailer": "^6.9.1",
-    "yup": "^1.0.2"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "_id": "api-pi@1.0.0",
+  "bugs": {
+    "url": "https://github.com/diogenesOliver/api-PI/issues"
+  },
+  "homepage": "https://github.com/diogenesOliver/api-PI#readme",
+  "keywords": [],
+  "license": "ISC",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diogenesOliver/api-PI.git"
   }
 }
