--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "author": "",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve web/main.js",
     "build": "vue-cli-service build",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest"
