--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^20.2.5",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
