--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/diogenesOliver/api-PI#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.1",
     "@types/jsonwebtoken": "^9.0.1",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
