--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "jest": "^29.5.0",
+    "miragejs": "^0.1.47",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
