--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
