--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "npx prisma generate && tsnd --respawn --transpile-only src/server.ts"
+    "dev": "npx prisma generate && tsnd --respawn --transpile-only src/server.ts",
+    "dev:mon": "nodemon --watch src src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "nodemon": "^3.0.1",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
